[package]
name = "zb"
version = "0.1.0"
edition = "2021"

[dependencies]
lz4_flex = { version = "0.9.3", default-features = false, features=["frame"] }
walkdir = "2.3.2"
tokio = { version = "1.21.2", features = ["full"] }
clap = { version = "4.0.18", features = ["derive"] }
debug_print = "1.0.0"
num_cpus = "1.13.1"